:bug: document 생성 후 jar 파일 생성하도록 수정 (#42) (#43)